<resources>

    <string name="app_name">雅森车品宝</string>
    <string name="data_failure_tip">数据加载失败,请稍后再试或检查网络</string>
    <string name="press_back_again_to_quit">再按一次退出程序</string>
    <string name="clear_sucess">缓存已清空</string>
    <string name="refresh_sucess">已刷新</string>

    <string name="find_new_version">发现新版本,请更新后再进入应用</string>
    <string name="is_new_version">您使用的已是最新版本</string>
    <string name="update">更新</string>
    <string name="quit">退出</string>
    <string name="failed">failed</string>
    <string name="done">done</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="detail_text">sss</string>

    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="home_search">请输入商品名称</string>

    <string name="unknown">未知</string>
    <string name="shoplist">常购清单</string>
    <string name="me_collect">我的收藏</string>
    <string name="collect_removeall">删除全部</string>
    <string name="highprofit">高毛利商品</string>

    <string name="all">全部</string>
    <string name="choiceness">精选</string>
    <string name="video">视频</string>


    <string name="me_order">我的订单</string>
    <string name="me_orderall">全部</string>
    <string name="obligation">待付款</string>
    <string name="overhang">待发货</string>
    <string name="waitreceiving">待收货</string>
    <string name="allorder">全部订单</string>
    <string name="orderdetails">订单详情</string>

    <string name="mejifen">我的积分</string>
    <string name="shouhuo_addressv">收货地址</string>
    <string name="mebaitiao">我的白条</string>
    <string name="phoneconsult">电话咨询</string>
    <string name="help">帮助中心</string>
    <string name="serviceing">在线客服</string>
    <string name="zhuanpiao">专票资质</string>
    <string name="yongyouquery">用油查询</string>
    <string name="numbervip">雅森帮</string>
    <string name="collect">收藏</string>
    <string name="callservice">在线客服</string>
    <string name="statistics">统计</string>

    <string name="staff_create">创建员工</string>
    <string name="staff_message">管理员工</string>

    <string name="makerdredge">开通创客</string>
    <string name="makerqrcode">推广二维码</string>
    <string name="makerreceiptaccount">收款账号</string>
    <string name="makerexploitshop">开拓门店</string>
    <string name="makershoporder">门店订单</string>

    <string name="newinvitehint">您好，帐号为%1$s的用户，邀请您成为他在雅森车品宝开设门店的%2$s，
        您同意后您在雅森车品宝的所有信息将同步成邀请您公司的信息。</string>
    <string name="oldinvitehint">您好，帐号为%1$s的用户，邀请您成为他在雅森车品宝开设门店的%2$s，
        您同意后您在雅森车品宝的所有信息将同步成邀请您公司的信息。如果拒绝，该帐号作废，需重新申请帐号。</string>
    <string name="shopcartitlehint">亲~当日16:00之前完成支付，当日发货；16:00之后完成支付的订单，将于次日发货，请悉知~</string>
    <string name="shopcartitlemail">满%1$s包邮，还差</string>
    <string name="password">qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM</string>

    <string name="authordialogsubmit">尊敬的用户：\n您的认证地区为%1$s，并且您的收货地址也只能在%2$s内添加和修改，请再次确认！</string>
    <string name="probationhint">试用截止日期%1$s，在此期间您可正常购买商品</string>
    <string name="mareragreememt">\u3000\u3000雅森车品宝创客，是指负责开发车品宝注册会员，并指导会员下单，维护客情关系，培训商品知识，协助处理售后，努力提高平台商品在门店的渗透率，愿意承担以上业务，根据销售业绩从雅森车品宝获得销售佣金的个人或单位。</string>
    <string name="mareragreememt1">\u3000\u3000创客的升级与降级原则上为逐级变动，不越级变动。新注册的创客前两个月的考核只升不降。</string>
    <string name="mareragreememt2">发生以下两种情况，雅森车品宝与创客解约\n1.初级创客未完成业绩考核\n2.不诚信行为。指考试作弊、业绩弄虚作假、欺骗公司或客户等不诚行为。</string>
    <string name="mareragreememt3">\u3000\u3000待开发客户是指还未开发成功的客户（即使已注册）。待开发客户两个自然月订单金额达到1000元，成为有效客户，只有有效客户的订单才与创客的业绩和提成挂钩。有效客户每两个月考核一次，如果两个月订单金额未达到1000元，那么此客户与创客脱钩，再次成为待开发客户，不再计入创客业绩。</string>
    <string name="mareragreememt4">\u3000\u3000每月10日（遇非工作日顺延）雅森车品宝将创客上月的销售佣金打入创客本人账户。</string>
    <string name="mareragreememt5">\u3000\u3000创客与雅森间为劳务关系。雅森为了创客开展业务便利可以为创客提供证明、名片、职务说明等材料文件，创客不得据此要求双方构成劳动关系。</string>
    <string name="mareragreememt6">\u3000\u3000因履行本协议发生争议的，由北京雅森国际展览有限公司住所地人民法院管辖。</string>
    <string name="mareragreememt7">\u3000\u3000本协议的解释权归雅森所有，雅森可以根据业务需要制定本协议实施的详细操作细则。</string>
    <string name="staffcreatesucceed">恭喜您，员工账号创建成功！请等待被邀请的员工同意后，才会正式生效。</string>
    <string name="staffcreatefailing">恭喜您，员工账号创建成功！请等待被邀请的员工同意后，才会正式生效。</string>
</resources>
