<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/include_goodsdetails_details"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:layout_height="@dimen/height_50">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_2"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_collect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_collect"
                android:background="@mipmap/collect_orange"
                style="@style/include_goodsdetails_details_image" />
            <TextView
                android:id="@+id/tv_collect"
                android:text="@string/collect"
                style="@style/include_goodsdetails_details_text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_callPhone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                style="@style/include_goodsdetails_details_image"
                android:background="@mipmap/callphone_orange"/>
            <TextView
                style="@style/include_goodsdetails_details_text"
                android:text="@string/phoneconsult"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_service"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                style="@style/include_goodsdetails_details_image"
                android:background="@mipmap/callservice_orange"/>
            <TextView
                style="@style/include_goodsdetails_details_text"
                android:text="@string/callservice"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/fl_shopCar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <LinearLayout
                    android:id="@+id/order_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/include_goodsdetails_details_image"
                        android:background="@mipmap/order_orange"/>
                    <TextView
                        style="@style/include_goodsdetails_details_text"
                        android:text="@string/shopcar"/>
                </LinearLayout>
                <www.xcd.com.mylibrary.view.BadgeView
                    android:id="@+id/main_tabitem_redpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/order_linear"
                    android:layout_marginRight="@dimen/main_tabwidget_redpoint_margin_top"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:minWidth="@dimen/main_tabwidget_redpoint_size"
                    android:minHeight="@dimen/main_tabwidget_redpoint_size"
                    android:textSize="@dimen/main_tabwidget_redpoint_text"
                    android:visibility="gone"/>
            </RelativeLayout>

        </FrameLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_addShopCar"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/textsize_15"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:text="加入进货单"/>

</LinearLayout>